@@ -40,7 +40,6 @@ if (ENABLE_INTROSPECTION)
 endif ()
 
 add_definitions(-DSTATICALLY_LINKED_WITH_WTF)
-add_definitions(-DLIBDIR="${LIB_INSTALL_DIR}")
 add_definitions(-DJSC_COMPILATION)
 
 list(APPEND JavaScriptCore_LIBRARIES
