@@ -1,3 +1,12 @@
+2018-04-25  Michael Catanzaro  <mcatanzaro@igalia.com>
+
+        [GTK] Miscellaneous build cleanups
+        https://bugs.webkit.org/show_bug.cgi?id=184399
+
+        Reviewed by Žan Doberšek.
+
+        * Source/cmake/OptionsGTK.cmake:
+
 2018-04-24  Leo Balter  <leonardo.balter@gmail.com>
 
         Land test262 test results associated with Test262 runner
